--- a/src/app/pagination/pagination.component.html
+++ b/src/app/pagination/pagination.component.html
@@ -13,7 +13,7 @@
     </label>
   </div>
   <div class="col-lg-1">
-    <label>Total:<br/>
+    <label style="float: right;">Total:<br/>
       <select [(ngModel)]="pageSize" (change)="pageNumber=0;get()">
         <option>1</option>
         <option>5</option>
