--- a/src/app/invoice/invoice.component.html
+++ b/src/app/invoice/invoice.component.html
@@ -82,7 +82,12 @@
           <div class="col-lg-8" *ngIf="!current && newVersion">
           <div *ngFor="let i of history" class="col-lg-12 col-sm-12 new-table-invoice {{i.status==0?'invoice-open':'invoice-close'}} {{idDetailsSelected==i.id?'selected':''}} row" (click)="openDetails(i)" style="cursor: pointer;" >
               <div class="col-sm-12 col-lg-1 status">&nbsp;</div>
-              <div class="col-lg-2" *ngIf="i.invoicer.logo" style="overflow: hidden"><img [src]="uploadService.getResourcePath(i.invoicer.logo)" height="75">&nbsp;</div>
+            <div class="col-lg-2" *ngIf="i.invoicer.logo" style="overflow: hidden">
+              <!--
+                              <img [src]="uploadService.getResourcePath(i.invoicer.logo)" height="75"/>&nbsp;
+              -->
+              <app-image-loader [image]="i.invoicer.logo"></app-image-loader>
+            </div>
               <div class="col-lg-9 row">
                 <div class="col-lg-7">
                   <div class="col-lg-12 title">{{i.title}}</div>
@@ -208,7 +213,7 @@
             <div class="col-lg-3"><fa-icon [icon]="faPaperclip"></fa-icon></div>
             <div class="col-lg-9">Attachments</div>
           </div>
-          
+
           <div class="col-lg-1 header-icon {{listOpened == 'products'?'open':''}}" (click)="openList('products')">
             <div class="col-lg-3"><fa-icon [icon]="faListAlt"></fa-icon></div>
             <div class="col-lg-9">Products</div>
@@ -234,7 +239,7 @@
               <div class="col-lg-3"><input [(ngModel)]="p.unitPrice"></div>
               <div class="col-lg-2"><input [(ngModel)]="p.quantity"></div>
               <div class="col-lg-3"><input [(ngModel)]="p.unitOfMeasure"></div>
-              
+
               <!--<button (click)="removeProduct(i)">-</button>-->
             </div>
           </div>
