--- a/src/app/invoice/invoice.component.html
+++ b/src/app/invoice/invoice.component.html
@@ -83,10 +83,7 @@
           <div *ngFor="let i of history" class="col-lg-12 col-sm-12 new-table-invoice {{i.status==0?'invoice-open':'invoice-close'}} {{idDetailsSelected==i.id?'selected':''}} row" (click)="openDetails(i)" style="cursor: pointer;" >
               <div class="col-sm-12 col-lg-1 status">&nbsp;</div>
             <div class="col-lg-2" *ngIf="i.invoicer.logo" style="overflow: hidden">
-              <!--
-                              <img [src]="uploadService.getResourcePath(i.invoicer.logo)" height="75"/>&nbsp;
-              -->
-              <app-image-loader [image]="i.invoicer.logo"></app-image-loader>
+              <app-image-loader [height]="75" [image]="i.invoicer.logo"></app-image-loader>
             </div>
               <div class="col-lg-9 row">
                 <div class="col-lg-7">
