--- a/src/app/data-table/data-table.component.css
+++ b/src/app/data-table/data-table.component.css
@@ -1,4 +1,4 @@
-.data-table-column {
+/*.data-table-column {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(50px, 1fr));
 }
@@ -9,4 +9,45 @@
 }
 .mat-row:hover {
     background-color: #ededed;
+}*/
+
+.table-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  border: solid 1px #ededed;
+  border-bottom: none;
+  border-top: none;
 }
+.table-column {
+    flex: 1 1 50px;
+}
+.table-header {
+    font-weight: 600;
+    border-bottom: solid 1px #ededed;
+    text-indent: 10px;
+    background-color: #e6e6e6;
+    padding-top: 5px;
+    padding-bottom: 5px; 
+
+}
+.table-content {
+    color: rgb(122, 122, 122);
+    padding: 5px 10px 5px 10px;
+    border-bottom: solid 1px #ededed;
+}
+.table-content:nth-child(2n){
+    background-color: #f8f8f8;
+}
+
+.table-pagination {
+    flex: 1;
+}
+.table-action {
+    flex: 1 1 0px;
+}
+/*
+.table-content[class*="row-"]:hover ~ .table-content[class*="row-"]{
+
+    background-color: red;
+}*/
