generic data table easy to use

--- a/src/app/pagination/pagination.component.css
+++ b/src/app/pagination/pagination.component.css
@@ -1,7 +1,9 @@
 .page{
     padding: 3px;
-    color: blue;
     cursor: pointer;
+}
+.page:hover{
+    color: #ffe000 !important;
 }
 .page.selected{
     font-weight: 600;
