--- a/src/app/data-table/data-table.component.html
+++ b/src/app/data-table/data-table.component.html
@@ -17,8 +17,11 @@
       </div>
     </div>
 </div>
-<div class="table-pagination">
+<div class="table-pagination" *ngIf="!noPagination">
     <app-pagination [restService]="dataSource" (newData)="refreshGrid($event)"></app-pagination>
+</div>
+<div class="table-pagination" *ngIf="noPagination">
+    <mat-paginator></mat-paginator>
 </div>
 
 
