--- a/src/app/item-list/item-list.component.html
+++ b/src/app/item-list/item-list.component.html
@@ -1,12 +1,7 @@
+
 <div class="form-group">
-  <!--
-  <h5>
-      <fa-icon [icon]="faListAlt" class="header-icon" style="background-color: #ffa785"></fa-icon> 
-      Items
-  </h5>
-  -->
   <button *ngIf="invoice.status != 2" class="btn btn-outline-secondary" (click)="addItem(content)"><fa-icon [icon]="faPlus"></fa-icon> Add</button>
-  <div class="container-table-items col-lg-12" *ngIf="invoice.items.length > 0">
+  <!--<div class="container-table-items col-lg-12" *ngIf="invoice.items.length > 0">
   <div class="row new-items table-header {{invoice.items.length>0?'':'hide'}}">
     <div class="col-lg-3">Project</div>
     <div class="col-lg-3">Period</div>
@@ -42,8 +37,19 @@
         </div>       
       </div>
   </div>
-  </div>
+  </div>-->
+  <app-data-table 
+  [dataSource]="invoice.items" 
+  [dataColumns]="dataColumns"
+  (editEvent)="tableEdit($event)"
+  (consultEvent)="tableConsult($event)"
+  (deleteEvent)="tableDelete($event)"
+  *ngIf="!selectOnly"
+  ></app-data-table>
 </div>
+
+
+
 
 <ng-template #content let-c="close" let-d="dismiss">
     <div class="modal-header">
