--- a/src/app/attachment-list/attachment-list.component.html
+++ b/src/app/attachment-list/attachment-list.component.html
@@ -6,8 +6,8 @@
     </h5>
   -->
   <label *ngIf="invoice.status != 2" class="btn btn-outline-secondary" for="file">
-    <fa-icon [icon]="faPlus"></fa-icon> 
-    Add
+    <fa-icon [icon]="faPlus"></fa-icon>
+    {{'common.action.add' | translate}}
   </label>
   <div class="container-table-items col-lg-12">
   <div class="row new-items table-header">
