--- a/src/app/data-table/data-table.component.css
+++ b/src/app/data-table/data-table.component.css
@@ -28,13 +28,18 @@
     text-indent: 10px;
     background-color: #e6e6e6;
     padding-top: 5px;
-    padding-bottom: 5px; 
+    padding-bottom: 5px;  
+    max-height: 35px;
+    overflow: hidden;
 
 }
 .table-content {
     color: rgb(122, 122, 122);
     padding: 5px 10px 5px 10px;
     border-bottom: solid 1px #ededed;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 .table-content:nth-child(2n){
     background-color: #f8f8f8;
