--- a/src/app/attachment-list/attachment-list.component.html
+++ b/src/app/attachment-list/attachment-list.component.html
@@ -9,6 +9,7 @@
     <fa-icon [icon]="faPlus"></fa-icon>
     {{'common.action.add' | translate}}
   </label>
+  <!--
   <div class="container-table-items col-lg-12">
   <div class="row new-items table-header">
     <div class="col-lg-7">Name</div>
@@ -30,5 +31,13 @@
       </div>
   </div>
   </div>
+-->
+
+<app-data-table 
+[dataSource]="invoice.attachments" 
+[dataColumns]="dataColumns"
+(consultEvent)="getAttachments($event)"
+(deleteEvent)="removeAttachment($event)"
+></app-data-table>
 </div>
 <input type="file" (change)="addAttachment($event)" id="file" style="display:none">
