--- a/src/app/invoice/invoice.component.html
+++ b/src/app/invoice/invoice.component.html
@@ -14,6 +14,9 @@
         <app-data-table *ngIf="!newVersion"
         [dataSource]="invoiceService"
         [dataColumns]="dataColumns"
+        (editEvent)="openInvoice($event)"
+        (consultEvent)="openInvoice($event)"
+        (deleteEvent)="deleteInvoice($event)"
         ></app-data-table>
 
 <!--
