--- a/src/app/data-table/data-table.component.css
+++ b/src/app/data-table/data-table.component.css
@@ -1,36 +1,37 @@
-/*.data-table-column {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(50px, 1fr));
-}
-.data-table-row {
-    border: 1px solid rgba(0, 0, 0, 0.8);
-    padding: 10px 0px 10px 0px;
-    text-indent: 5px;
-}
-.mat-row:hover {
-    background-color: #ededed;
-}*/
-
 .table-wrapper {
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
   border: solid 1px #ededed;
   border-bottom: none;
-  border-top: none;
+  /*border-top: none;*/
 }
 .table-column {
     flex: 1 1 50px;
 }
 .table-header {
-    font-weight: 600;
+   /* font-weight: 600;
     border-bottom: solid 1px #ededed;
     text-indent: 10px;
     background-color: #e6e6e6;
     padding-top: 5px;
     padding-bottom: 5px;  
     max-height: 35px;
+    overflow: hidden;*/
+
+
+
+    font-weight: 600;
+    border-bottom: solid 1px #d6d6d6;;
+    text-indent: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
     overflow: hidden;
+    color: #636363;
+
+
+
+
 
 }
 .table-content {
