--- a/src/app/invoice/invoice.component.html
+++ b/src/app/invoice/invoice.component.html
@@ -220,16 +220,16 @@
         <div class="onglet col-lg-12 row">
           <div class="col-lg-1 header-icon {{listOpened == 'items'? 'open':''}}" (click)="openList('items')">
             <div class="col-lg-3"><fa-icon [icon]="faListAlt"></fa-icon></div>
-            <div class="col-lg-9">Items</div>
+            <div class="col-lg-9">{{'common.items' | translate}}</div>
           </div>
           <div class="col-lg-1 header-icon {{listOpened == 'attachments'?'open':''}}" (click)="openList('attachments')">
             <div class="col-lg-3"><fa-icon [icon]="faPaperclip"></fa-icon></div>
-            <div class="col-lg-9">Attachments</div>
+            <div class="col-lg-9">{{'common.attachments'| translate}}</div>
           </div>
 
           <div class="col-lg-1 header-icon {{listOpened == 'products'?'open':''}}" (click)="openList('products')">
             <div class="col-lg-3"><fa-icon [icon]="faListAlt"></fa-icon></div>
-            <div class="col-lg-9">Products</div>
+            <div class="col-lg-9">{{'menu.product'|translate}}</div>
           </div>
         </div>
         <app-attachment-list [invoice]="current" *ngIf="current && listOpened == 'attachments'"></app-attachment-list>
@@ -267,7 +267,7 @@
 
 <ng-template #content let-c="close" let-d="dismiss" class="col-lg-12">
   <div class="modal-header col-lg-12">
-    <h4 class="modal-title" id="modal-basic-title">Invoice preview</h4>
+    <h4 class="modal-title" id="modal-basic-title">{{'common.action.preview'|translate}}</h4>
     <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
       <span aria-hidden="true">&times;</span>
     </button>
@@ -277,7 +277,7 @@
 
 <ng-template #invoiceContent let-c="close" let-d="dismiss" class="col-lg-12">
   <div class="modal-header col-lg-12">
-    <h4 class="modal-title" id="modal-basic-title">New Invoice</h4>
+    <h4 class="modal-title" id="modal-basic-title">{{'page.invoice.newInvoice'|translate}}</h4>
     <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
       <span aria-hidden="true">&times;</span>
     </button>
@@ -327,7 +327,9 @@
     </div>
   </div>
   <div class="modal-footer col-lg-12">
-    <button (click)="save()" type="button" class="btn btn-outline-secondary  new-invoice">Create invoice</button>
+    <button (click)="save()" type="button" class="btn btn-outline-secondary  new-invoice">{{'common.action.add'
+      |translate}}
+    </button>
   </div>
 </ng-template>
 <ng-template #menu>
