--- a/src/app/item-list/item-list.component.html
+++ b/src/app/item-list/item-list.component.html
@@ -99,7 +99,7 @@
     </div>
     <div class="modal-body col-lg-12 row">
       <div class="col-lg-12">
-        <label>Project</label>
+        <label>{{'page.items.project'|translate}}</label>
         <input class="form-control" [ngModelOptions]="{standalone: true}" [(ngModel)]="currentItem.project" [readonly]="invoice.status == 2"/>
       </div>
       <div class="col-lg-12">
