--- a/src/app/invoice/invoice.component.html
+++ b/src/app/invoice/invoice.component.html
@@ -238,13 +238,13 @@
         <div class="col-lg-12 row" *ngIf="current && listOpened == 'products'">
           <div class="col-lg-7">
             <h5>Products</h5>
-            <span class="btn btn-outline-dark" (click)="current.products = []">Clear selection</span>
+            <span class="btn btn-outline-dark" (click)="current.products = []">{{'common.action.clearselection'|translate}}</span>
             <div class="col-lg-12 row selected-product-header">
                 <div class="col-lg-1"></div>
-                <div class="col-lg-3">Name</div>
-                <div class="col-lg-3">Unit price</div>
-                <div class="col-lg-2">Quantity</div>
-                <div class="col-lg-3">Unit of measure</div>
+              <div class="col-lg-3">{{'common.name'|translate}}</div>
+              <div class="col-lg-3">{{'page.items.priceUnit'|translate}}</div>
+              <div class="col-lg-2">{{'page.items.qty'| translate}}</div>
+              <div class="col-lg-3">{{'page.items.unitOfMeasure'| translate}}</div>
             </div>
             <div  class="col-lg-12 row selected-product-content" *ngFor="let p of current.products;let i = index">
               <div class="col-lg-1"><span click="remove">-</span></div>
